--- a/views/topics_card.phtml
+++ b/views/topics_card.phtml
@@ -10,6 +10,7 @@
             </thead>
 
             <?php
+            /** @noinspection PhpUndefinedVariableInspection */
             $topicArray = $db->getTopicTable();
 
             foreach ($topicArray as $topics) {
