Minor changes (date format, typo mistake)

--- a/views/posts_card.phtml
+++ b/views/posts_card.phtml
@@ -33,14 +33,15 @@ $post = new Post();
 
                     echo '<td>';
 
-                    echo $post->firstName;
+                    echo $post->firstName;?> <?php
                     echo $post->lastName;
 
                     echo '</td>';
 
                     echo '<td>';
 
-                    echo $post->timestamp;
+                    $timestamp = strtotime($post->timestamp);
+                    echo date( 'jS F Y',$timestamp);
 
                     echo '</td>';
 
