- Minor changes in Navigaton menu - Added Register/Login form

--- a/views/navbar_card.phtml
+++ b/views/navbar_card.phtml
@@ -11,10 +11,10 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button is-danger">
+                        <a class="button is-danger" href="../form.php?form=register">
                             <strong>Sign Up</strong>
                         </a>
-                        <a class="button is-black">
+                        <a class="button is-black" href="../form.php?form=login">
                             <strong>Log In</strong>
                         </a>
                     </div>
