--- a/views/navbar_card.phtml
+++ b/views/navbar_card.phtml
@@ -11,6 +11,14 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
+                        <a class="button is-success mr-6">
+                            <span class="icon">
+                                <i class="far fa-plus-square"></i>
+                            </span>
+                            <span>
+                                <strong>New Post</strong>
+                            </span>
+                        </a>
                         <a class="button is-danger" href="../form.php?form=register">
                             <strong>Sign Up</strong>
                         </a>
