--- a/views/singlePost_card.phtml
+++ b/views/singlePost_card.phtml
@@ -22,6 +22,19 @@
             </strong>
             <hr class="has-background-danger">
         </h1>
+        <button class="button  is-danger mb-2">
+                <span class="icon">
+                    <i class="fas fa-edit"></i>
+                </span>
+            <span>Edit </span>
+        </button>
+
+        <button class="button icon-text">
+                <span class="icon">
+                    <i class="fas fa-trash-alt"></i>
+                </span>
+            <span>Delete</span>
+        </button>
 
         <div class="subtitle is-6">
             <p class="mb-3">
