--- a/views/navbar_card.phtml
+++ b/views/navbar_card.phtml
@@ -2,7 +2,7 @@
     <div class="tile is-child box has-background-light">
         <nav class="navbar" role="navigation" aria-label="Main Navigation">
             <div class="navbar-brand">
-                <a class="navbar-item is-size-3 ml-4" href="#">
+                <a class="navbar-item is-size-3 ml-4" href="../index.php">
                     <strong class="has-text-black">Gaming Forum</strong>
                 </a>
                 <small class="navbar-item ml-3 has-text-danger-dark">Community for Players</small>
