--- a/views/login_card.phtml
+++ b/views/login_card.phtml
@@ -9,7 +9,7 @@ $user = new User();
         <div class="card">
             <div class="card-content">
 
-                <form action="/models/User.php" method="post" id="loginForm">
+                <form action="/login.php" method="post" id="loginForm">
                     <div class="field">
                         <label class="label">Email</label>
                         <div class="control">
