Base authorization logic updated

--- a/views/register_card.phtml
+++ b/views/register_card.phtml
@@ -9,7 +9,7 @@ $user = new User();
         <div class="card">
             <div class="card-content">
 
-                <form action="/models/User.php" method="post" id="registrationForm">
+                <form action="/register.php" method="post" id="registrationForm">
                     <div class="field">
                         <label class="label">First Name</label>
                         <div class="control">
