Added registration functionality

--- a/views/register_card.phtml
+++ b/views/register_card.phtml
@@ -63,7 +63,7 @@ $user = new User();
 
                     <div class="field">
                         <div class="control">
-                            <button class="button is-danger is-fullwidth" id="registrationButton">
+                            <button class="button is-danger is-fullwidth" id="registrationButton" type="submit">
                                 Sign Up
                             </button>
                         </div>
