Minor graphical changed

--- a/views/login_card.phtml
+++ b/views/login_card.phtml
@@ -13,14 +13,14 @@ $user = new User();
                     <div class="field">
                         <label class="label">Email</label>
                         <div class="control">
-                            <input class="input" type="email" id="email" name="email" placeholder="Email" required="required">
+                            <input class="input is-rounded" type="email" id="email" name="email" placeholder="Email" required="required">
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Password</label>
                         <div class="control">
-                            <input class="input" type="password" id="password" name="password" placeholder="Password" required="required">
+                            <input class="input is-rounded is-rounded" type="password" id="password" name="password" placeholder="Password" required="required">
                         </div>
                     </div>
 
@@ -28,7 +28,7 @@ $user = new User();
 
                     <div class="field">
                         <div class="control">
-                            <button class="button is-danger is-fullwidth" id="loginButton">
+                            <button class="button is-danger is-fullwidth is-rounded" id="loginButton" type="submit">
                                 Log In
                             </button>
                         </div>
