--- a/views/register_card.phtml
+++ b/views/register_card.phtml
@@ -13,49 +13,49 @@ $user = new User();
                     <div class="field">
                         <label class="label">First Name</label>
                         <div class="control">
-                            <input class="input" type="text" id="firstName" name="firstName" placeholder="First Name" required="required">
+                            <input class="input is-rounded" type="text" id="firstName" name="firstName" placeholder="First Name" required="required">
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Last Name</label>
                         <div class="control">
-                            <input class="input" type="text" id="lastName" name="lastName" placeholder="Last Name" required="required">
+                            <input class="input is-rounded" type="text" id="lastName" name="lastName" placeholder="Last Name" required="required">
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Email</label>
                         <div class="control">
-                            <input class="input" type="email" id="email" name="email" placeholder="Email" required="required">
+                            <input class="input is-rounded" type="email" id="email" name="email" placeholder="Email" required="required">
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Phone</label>
                             <div class="control">
-                                <input class="input" type="tel" id="phone" name="phone" placeholder="Phone" required="required">
+                                <input class="input is-rounded" type="tel" id="phone" name="phone" placeholder="Phone" required="required">
                             </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Address</label>
                         <div class="control">
-                            <input class="input" type="text" id="address" name="address" placeholder="Address">
+                            <input class="input is-rounded" type="text" id="address" name="address" placeholder="Address">
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Password</label>
                         <div class="control">
-                            <input class="input" type="password" id="password" name="password" placeholder="Password" required="required">
+                            <input class="input is-rounded" type="password" id="password" name="password" placeholder="Password" required="required">
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Confirm Password</label>
                         <div class="control">
-                            <input class="input" type="password" id="confPassword" name="confPassword" placeholder="Confrim Password" required="required">
+                            <input class="input is-rounded" type="password" id="confPassword" name="confPassword" placeholder="Confrim Password" required="required">
                         </div>
                     </div>
 
@@ -63,7 +63,7 @@ $user = new User();
 
                     <div class="field">
                         <div class="control">
-                            <button class="button is-danger is-fullwidth" id="registrationButton" type="submit">
+                            <button class="button is-danger is-fullwidth is-rounded" id="registrationButton" type="submit">
                                 Sign Up
                             </button>
                         </div>
